--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/server.ts",
+    "dev": "ts-node src/server.ts",
     "start": "node dist/server.js",
     "client": "ts-node src/client.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
