--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "ts-node src/server.ts",
     "start": "node dist/server.js",
     "client": "ts-node src/client.ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "build": "tsc"
   },
   "keywords": [],
@@ -25,5 +26,12 @@
     "openai": "^4.97.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.14",
+    "@types/supertest": "^6.0.3",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.4",
+    "ts-jest": "^29.3.2"
   }
 }
