--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "client": "ts-node src/client.ts",
     "test": "jest",
     "test:watch": "jest --watch",
-    "build": "tsc"
+    "build": "tsc",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
@@ -30,7 +31,9 @@
   "devDependencies": {
     "@types/jest": "^29.5.14",
     "@types/supertest": "^6.0.3",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
+    "lint-staged": "^15.5.2",
     "supertest": "^6.3.4",
     "ts-jest": "^29.3.2"
   }
