--- a/create-echo-app/templates/nextjs/package.json
+++ b/create-echo-app/templates/nextjs/package.json
@@ -9,9 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "ai": "^4.0.0",
     "@ai-sdk/openai": "^1.0.0",
-    "next": "15.1.4",
+    "ai": "^4.0.0",
+    "next": "^15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
@@ -26,4 +26,4 @@
     "tailwindcss": "^3.4.0",
     "typescript": "^5.3.3"
   }
-} 
+}
