--- a/echo-control/package.json
+++ b/echo-control/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.20.2",
     "@headlessui/react": "^2.2.4",
     "@prisma/client": "^6.8.2",
     "@tailwindcss/typography": "^0.5.16",
