--- a/echo-server/package.json
+++ b/echo-server/package.json
@@ -16,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@echo/typescript-sdk": "file:../echo-typescript-sdk",
     "@types/compression": "^1.7.5",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.24",
