breaking change for removing keytar, working docker image for echo-server

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "scripts": {
     "dev": "npm run dev --workspaces",
     "build": "npm run build --workspaces",
+    "build:server": "cd echo-server && npm run build && cd ..",
+    "start:server": "cd echo-server && npm run start",
     "test": "npm run test --workspaces",
     "lint": "npm run lint --workspaces --if-present",
     "lint:fix": "npm run lint:fix --workspaces --if-present",
