--- a/echo-server/package.json
+++ b/echo-server/package.json
@@ -4,12 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "copy-prisma": "rm -rf src/generated && mkdir -p src/generated && cp -r ../echo-control/src/generated/prisma src/generated/",
+    "copy-prisma-to-dist": "mkdir -p dist/generated && cp -r src/generated/prisma dist/generated/",
+    "prebuild": "npm run copy-prisma",
+    "predev": "npm run copy-prisma",
+    "prestart": "npm run copy-prisma",
     "dev": "ts-node src/server.ts",
     "start": "node dist/server.js",
     "client": "ts-node src/client.ts",
     "test": "jest",
     "test:watch": "jest --watch",
-    "build": "tsc",
+    "build": "tsc && npm run copy-prisma-to-dist",
     "lint": "npx eslint src/**/*.ts --no-warn-ignored",
     "lint:fix": "npx eslint src/**/*.ts --no-warn-ignored --fix",
     "type-check": "tsc --noEmit",
@@ -24,7 +29,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.24",
     "@types/node-fetch": "^2.6.11",
-    "@zdql/echo-typescript-sdk": "^1.0.8",
+    "@zdql/echo-typescript-sdk": "^1.0.9",
     "compression": "^1.8.0",
     "dotenv": "^16.5.0",
     "express": "^4.18.3",
