--- a/echo-control/package.json
+++ b/echo-control/package.json
@@ -22,6 +22,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
+    "jose": "^6.0.11",
     "lucide-react": "^0.511.0",
     "nanoid": "^5.1.5",
     "next": "15.3.3",
@@ -41,7 +42,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
-    "typescript": "^5.0.0",
-    "husky": "^9.0.0"
+    "husky": "^9.0.0",
+    "typescript": "^5.0.0"
   }
 }
