--- a/echo-server/package.json
+++ b/echo-server/package.json
@@ -6,17 +6,17 @@
   "scripts": {
     "copy-prisma": "rm -rf src/generated && mkdir -p src/generated && cp -r ../echo-control/src/generated/prisma src/generated/",
     "copy-prisma-to-dist": "mkdir -p dist/generated && cp -r src/generated/prisma dist/generated/",
-    "prebuild": "npm run copy-prisma",
-    "predev": "npm run copy-prisma",
-    "prestart": "npm run copy-prisma",
+    "prebuild": "bun run copy-prisma",
+    "predev": "bun run copy-prisma",
+    "prestart": "bun run copy-prisma",
     "dev": "ts-node src/server.ts",
     "start": "node dist/server.js",
     "client": "ts-node src/client.ts",
     "test": "jest",
     "test:watch": "jest --watch",
-    "build": "tsc && npm run copy-prisma-to-dist",
-    "lint": "npx eslint src/**/*.ts --no-warn-ignored",
-    "lint:fix": "npx eslint src/**/*.ts --no-warn-ignored --fix",
+    "build": "tsc && bun run copy-prisma-to-dist",
+    "lint": "bunx eslint src/**/*.ts --no-warn-ignored",
+    "lint:fix": "bunx eslint src/**/*.ts --no-warn-ignored --fix",
     "type-check": "tsc --noEmit",
     "format": "prettier --write src/**/*.{ts,js}",
     "format:check": "prettier --check src/**/*.{ts,js}"
