--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,5 @@ jspm_packages/
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test 
 .vercel
+*storybook.log
+storybook-static
