--- a/echo-control/Dockerfile.test
+++ b/echo-control/Dockerfile.test
@@ -8,14 +8,25 @@ WORKDIR /app
 # Install pnpm
 RUN npm install -g pnpm
 
-# Copy package files
-COPY package.json pnpm-lock.yaml ./
+# Copy monorepo workspace files
+COPY pnpm-workspace.yaml pnpm-lock.yaml ./
 
-# Install dependencies
+# Copy all workspace package.json files to satisfy pnpm workspace requirements
+COPY echo-control/package.json ./echo-control/
+COPY echo-server/package.json ./echo-server/
+COPY echo-typescript-sdk/package.json ./echo-typescript-sdk/
+COPY echo-react-sdk/package.json ./echo-react-sdk/
+COPY create-echo-app/package.json ./create-echo-app/
+COPY integration-tests/package.json ./integration-tests/
+
+# Install dependencies for the entire workspace
 RUN pnpm install --frozen-lockfile
 
-# Copy source code
-COPY . .
+# Copy echo-control source code
+COPY echo-control/ ./echo-control/
+
+# Set working directory to echo-control
+WORKDIR /app/echo-control
 
 # Generate Prisma client
 RUN pnpm prisma:generate
