functional app again with upgraded schema

--- a/echo-server/package.json
+++ b/echo-server/package.json
@@ -9,9 +9,9 @@
     "prebuild": "pnpm run copy-prisma",
     "predev": "pnpm run copy-prisma",
     "prestart": "pnpm run copy-prisma",
-    "dev": "ts-node src/server.ts",
+    "dev": "npx tsx src/server.ts",
     "start": "node dist/server.js",
-    "client": "ts-node src/client.ts",
+    "client": "npx tsx src/client.ts",
     "test": "jest",
     "test:watch": "jest --watch",
     "build": "tsc && pnpm run copy-prisma-to-dist",
