--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -12,3 +12,12 @@ allowBuiltDependencies:
   - esbuild
   - msw
   - prisma
+ignoredBuiltDependencies:
+  - '@clerk/shared'
+  - '@prisma/client'
+  - '@prisma/engines'
+  - esbuild
+  - msw
+  - prisma
+  - sharp
+  - unrs-resolver
