--- a/echo-typescript-sdk/package.json
+++ b/echo-typescript-sdk/package.json
@@ -34,7 +34,9 @@
   "author": "Echo Team",
   "license": "MIT",
   "dependencies": {
+    "@types/bcryptjs": "^3.0.0",
     "axios": "^1.6.0",
+    "bcryptjs": "^3.0.2",
     "chalk": "^5.3.0",
     "commander": "^11.0.0",
     "inquirer": "^9.2.0",
