--- a/echo-server/docker/Dockerfile.railway
+++ b/echo-server/docker/Dockerfile.railway
@@ -4,6 +4,9 @@ FROM node:20-alpine
 # Set working directory
 WORKDIR /app
 
+# Install pnpm globally
+RUN npm install -g pnpm
+
 # Declare build arguments for environment variables needed during build
 ARG DATABASE_URL
 ARG STRIPE_SECRET_KEY
@@ -44,8 +47,10 @@ RUN apk add --no-cache \
     git \
     openssh-client 
 
-# Copy package files for dependency installation
-COPY package*.json ./
+# Copy pnpm workspace and lock files for dependency installation
+COPY pnpm-lock.yaml ./
+COPY pnpm-workspace.yaml ./
+COPY package.json ./
 COPY tsconfig.base.json ./
 
 # Copy all project files first
@@ -80,4 +85,4 @@ RUN pnpm run build
 EXPOSE 3069
 
 # Step 4: Start the server
-CMD ["npm", "start"] 
+CMD ["pnpm", "start"] 
