--- a/echo-react-sdk/package.json
+++ b/echo-react-sdk/package.json
@@ -22,7 +22,7 @@
     "type-check": "tsc --noEmit",
     "lint": "eslint src --ext .ts,.tsx",
     "format": "prettier --write src",
-    "test": "vitest",
+    "test": "vitest run",
     "test:ui": "vitest --ui",
     "test:security": "vitest run --config vitest.security.config.ts",
     "test:integration": "vitest run --config vitest.integration.config.ts",
