--- a/package.json
+++ b/package.json
@@ -57,5 +57,8 @@
     "**/*.{ts,tsx,js,jsx,json,md}": [
       "pnpm run format:check"
     ]
+  },
+  "dependencies": {
+    "vitest": "^3.2.3"
   }
 }
