--- a/echo-server/package.json
+++ b/echo-server/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "copy-prisma": "rm -rf src/generated && mkdir -p src/generated && cp -r ../echo-control/src/generated/prisma src/generated/",
+    "copy-schema": "mkdir -p prisma && cp ../echo-control/prisma/schema.prisma prisma/",
+    "prisma:generate": "pnpx prisma generate",
+    "setup-prisma": "pnpm run copy-schema && pnpm run prisma:generate",
+    "copy-prisma": "pnpm run setup-prisma",
     "copy-prisma-to-dist": "mkdir -p dist/generated && cp -r src/generated/prisma dist/generated/",
     "prebuild": "pnpm run copy-prisma",
     "predev": "pnpm run copy-prisma",
@@ -28,6 +31,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^6.8.2",
     "@types/compression": "^1.7.5",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.24",
@@ -36,10 +40,12 @@
     "compression": "^1.8.0",
     "dotenv": "^16.5.0",
     "express": "^4.18.3",
+    "jose": "^6.0.11",
     "node-fetch": "^2.7.0",
     "openai": "^4.97.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "prisma": "^6.8.2"
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
