--- a/echo-typescript-sdk/package.json
+++ b/echo-typescript-sdk/package.json
@@ -40,6 +40,7 @@
     "chalk": "^5.3.0",
     "commander": "^11.0.0",
     "inquirer": "^9.2.0",
+    "jose": "^6.0.11",
     "open": "^9.1.0"
   },
   "devDependencies": {
