--- a/echo-react-sdk/package.json
+++ b/echo-react-sdk/package.json
@@ -55,6 +55,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^14.5.2",
+    "@types/jsdom": "^21.1.7",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
