--- a/echo-typescript-sdk/package.json
+++ b/echo-typescript-sdk/package.json
@@ -45,15 +45,16 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/inquirer": "^9.0.0",
-    "@types/jest": "^29.0.0",
+    "@types/jest": "^29.5.0",
     "@types/node": "^20.0.0",
     "@typescript-eslint/eslint-plugin": "^8.33.1",
     "@typescript-eslint/parser": "^8.33.1",
     "dotenv": "^16.0.0",
     "eslint": "^8.57.1",
     "express": "^4.18.0",
-    "jest": "^29.0.0",
-    "ts-jest": "^29.4.0",
+    "jest": "^29.7.0",
+    "jest-util": "^29.7.0",
+    "ts-jest": "^29.1.0",
     "typescript": "^5.0.0"
   },
   "files": [
