--- a/echo-typescript-sdk/package.json
+++ b/echo-typescript-sdk/package.json
@@ -15,14 +15,14 @@
     "type-check": "tsc --noEmit",
     "format": "prettier --write src/**/*.{ts,js}",
     "format:check": "prettier --check src/**/*.{ts,js}",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:unit": "jest --testPathPattern='(auth|client).test.ts'",
-    "test:cli": "jest --testPathPattern='cli.test.ts'",
-    "test:integration": "jest --testPathPattern='integration.test.ts'",
+    "test": "vitest run",
+    "test:watch": "vitest --watch",
+    "test:unit": "vitest --run --testNamePattern='(auth|client)'",
+    "test:cli": "vitest --run --testNamePattern='cli'",
+    "test:integration": "vitest --run --testNamePattern='integration'",
     "test:all": "pnpm run test:unit && pnpm run test:cli && pnpm run test:integration",
-    "test:coverage": "jest --coverage",
-    "test:ci": "jest --ci --coverage --watchAll=false",
+    "test:coverage": "vitest --coverage",
+    "test:ci": "vitest --run --coverage",
     "prepublishOnly": "pnpm run build"
   },
   "keywords": [
@@ -46,16 +46,15 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/inquirer": "^9.0.0",
-    "@types/jest": "^29.0.0",
     "@types/node": "^20.0.0",
     "@typescript-eslint/eslint-plugin": "^8.33.1",
     "@typescript-eslint/parser": "^8.33.1",
+    "@vitest/coverage-v8": "^2.0.0",
     "dotenv": "^16.0.0",
     "eslint": "^8.57.1",
     "express": "^4.18.0",
-    "jest": "^29.0.0",
-    "ts-jest": "^29.4.0",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "vitest": "^2.0.0"
   },
   "files": [
     "dist/**/*"
