--- a/echo-typescript-sdk/package.json
+++ b/echo-typescript-sdk/package.json
@@ -2,8 +2,27 @@
   "name": "@zdql/echo-typescript-sdk",
   "version": "1.0.10",
   "description": "TypeScript SDK for Echo platform",
+  "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
+    },
+    "./cli": {
+      "types": "./dist/cli-helpers.d.ts",
+      "import": "./dist/cli-helpers.js"
+    },
+    "./client": {
+      "types": "./dist/client.d.ts",
+      "import": "./dist/client.js"
+    },
+    "./types": {
+      "types": "./dist/types.d.ts",
+      "import": "./dist/types.js"
+    }
+  },
   "bin": {
     "echo-cli": "dist/cli.js"
   },
