--- a/echo-server/package.json
+++ b/echo-server/package.json
@@ -35,29 +35,31 @@
   "dependencies": {
     "@prisma/client": "^6.8.2",
     "@types/compression": "^1.7.5",
+    "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.24",
     "@types/node-fetch": "^2.6.11",
     "@zdql/echo-typescript-sdk": "file:../echo-typescript-sdk",
     "compression": "^1.8.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.18.3",
     "jose": "^6.0.11",
     "node-fetch": "^2.7.0",
+    "prisma": "^6.8.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3",
-    "prisma": "^6.8.2"
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@anthropic-ai/sdk": "^0.39.0",
     "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.34.1",
     "@typescript-eslint/parser": "^8.34.1",
     "eslint": "^9.29.0",
     "husky": "^9.1.7",
     "lint-staged": "^15.5.2",
+    "openai": "^4.97.0",
     "supertest": "^6.3.4",
-    "vitest": "^3.2.3",
-    "@anthropic-ai/sdk": "^0.39.0",
-    "openai": "^4.97.0"
+    "vitest": "^3.2.3"
   }
 }
