--- a/echo-control/package.json
+++ b/echo-control/package.json
@@ -16,8 +16,10 @@
   "dependencies": {
     "@clerk/nextjs": "^6.20.2",
     "@headlessui/react": "^2.2.4",
+    "@opentelemetry/api": "^1.9.0",
     "@prisma/client": "^6.8.2",
     "@tailwindcss/typography": "^0.5.16",
+    "@vercel/otel": "^1.13.0",
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
