add to railyway docker

--- a/Dockerfile.railway
+++ b/Dockerfile.railway
@@ -22,6 +22,19 @@ ARG OPENAI_API_KEY
 ARG ECHO_API_KEY
 ARG ECHO_BASE_URL
 ARG WEBHOOK_URL
+ARG OTEL_EXPORTER_OTLP_ENDPOINT
+ARG OTEL_EXPORTER_OTLP_HEADERS
+ARG OTEL_EXPORTER_OTLP_TRACES_ENDPOINT
+ARG OTEL_EXPORTER_OTLP_TRACES_HEADERS
+ARG OTEL_EXPORTER_OTLP_METRICS_ENDPOINT
+ARG OTEL_EXPORTER_OTLP_METRICS_HEADERS
+ARG OTEL_EXPORTER_OTLP_LOGS_ENDPOINT
+ARG OTEL_SERVICE_NAME
+ARG OTEL_SERVICE_VERSION
+ARG OTEL_NODE_RESOURCE_DETECTORS
+ARG OTEL_TRACES_EXPORTER
+ARG OTEL_LOG_LEVEL
+ARG NODE_OPTIONS
 
 # Set environment variables from build arguments
 ENV DATABASE_URL=$DATABASE_URL
@@ -38,6 +51,19 @@ ENV OPENAI_API_KEY=$OPENAI_API_KEY
 ENV ECHO_API_KEY=$ECHO_API_KEY
 ENV ECHO_BASE_URL=$ECHO_BASE_URL
 ENV WEBHOOK_URL=$WEBHOOK_URL
+ENV OTEL_EXPORTER_OTLP_ENDPOINT=$OTEL_EXPORTER_OTLP_ENDPOINT
+ENV OTEL_EXPORTER_OTLP_HEADERS=$OTEL_EXPORTER_OTLP_HEADERS
+ENV OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=$OTEL_EXPORTER_OTLP_TRACES_ENDPOINT
+ENV OTEL_EXPORTER_OTLP_TRACES_HEADERS=$OTEL_EXPORTER_OTLP_TRACES_HEADERS
+ENV OTEL_EXPORTER_OTLP_METRICS_ENDPOINT=$OTEL_EXPORTER_OTLP_METRICS_ENDPOINT
+ENV OTEL_EXPORTER_OTLP_METRICS_HEADERS=$OTEL_EXPORTER_OTLP_METRICS_HEADERS
+ENV OTEL_EXPORTER_OTLP_LOGS_ENDPOINT=$OTEL_EXPORTER_OTLP_LOGS_ENDPOINT
+ENV OTEL_SERVICE_NAME=$OTEL_SERVICE_NAME
+ENV OTEL_SERVICE_VERSION=$OTEL_SERVICE_VERSION
+ENV OTEL_NODE_RESOURCE_DETECTORS=$OTEL_NODE_RESOURCE_DETECTORS
+ENV OTEL_TRACES_EXPORTER=$OTEL_TRACES_EXPORTER
+ENV OTEL_LOG_LEVEL=$OTEL_LOG_LEVEL
+ENV NODE_OPTIONS=$NODE_OPTIONS
 
 # Install system dependencies
 RUN apk add --no-cache \
