--- a/echo-server/package.json
+++ b/echo-server/package.json
@@ -49,6 +49,7 @@
     "jose": "^6.0.11",
     "node-fetch": "^2.7.0",
     "prisma": "^6.8.2",
+    "register": "link:@opentelemetry/auto-instrumentations-node/register",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
