--- a/Dockerfile.railway
+++ b/Dockerfile.railway
@@ -34,6 +34,7 @@ ARG OTEL_SERVICE_VERSION
 ARG OTEL_NODE_RESOURCE_DETECTORS
 ARG OTEL_TRACES_EXPORTER
 ARG OTEL_LOG_LEVEL
+ARG PORT
 
 # Set environment variables from build arguments
 ENV DATABASE_URL=$DATABASE_URL
@@ -62,6 +63,7 @@ ENV OTEL_SERVICE_VERSION=$OTEL_SERVICE_VERSION
 ENV OTEL_NODE_RESOURCE_DETECTORS=$OTEL_NODE_RESOURCE_DETECTORS
 ENV OTEL_TRACES_EXPORTER=$OTEL_TRACES_EXPORTER
 ENV OTEL_LOG_LEVEL=$OTEL_LOG_LEVEL
+ENV PORT=$PORT
 
 # Install system dependencies
 RUN apk add --no-cache \
