--- a/echo-typescript-sdk/tsconfig.json
+++ b/echo-typescript-sdk/tsconfig.json
@@ -5,7 +5,9 @@
     "rootDir": "./src",
     "baseUrl": "./src",
     "types": ["node", "vitest/globals"],
-    "module": "ES2022"
+    "module": "ES2022",
+    "moduleResolution": "bundler",
+    "target": "ES2022"
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "__tests__/**/*"]
