--- a/echo-react-sdk/package.json
+++ b/echo-react-sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zdql/echo-react-sdk",
-  "version": "0.1.10",
+  "version": "0.1.11",
   "description": "React SDK for Echo OAuth2 + PKCE authentication and token management",
   "type": "module",
   "main": "./dist/index.cjs",
@@ -44,8 +44,8 @@
   "author": "Merit Systems",
   "license": "MIT",
   "peerDependencies": {
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0 || ^19.0.0",
+    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0 || ^19.0.0"
   },
   "dependencies": {
     "dompurify": "^3.2.6",
