Fix db:seed command by separating database setup steps
- Run prisma:push from echo-control directory (where schema is)
- Run db:seed from integration-tests directory (where script exists)
- Keep setup script focused on service management

--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -107,6 +107,14 @@ jobs:
             sleep 2
           done'
 
+      - name: Setup Prisma schema
+        working-directory: echo-control
+        run: pnpm prisma:push
+
+      - name: Seed integration test database
+        working-directory: integration-tests
+        run: pnpm db:seed
+
       - name: Setup integration test environment
         working-directory: integration-tests
         run: |
