--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -76,6 +76,7 @@ jobs:
           
           # Clerk Configuration
           CLERK_PUBLISHABLE_KEY=${{ secrets.TEST_CLERK_PUBLISHABLE_KEY }}
+          NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=${{ secrets.TEST_CLERK_PUBLISHABLE_KEY }}
           
           # Integration Test JWTs
           INTEGRATION_TEST_JWT=${{ secrets.INTEGRATION_TEST_JWT }}
