--- a/echo-server/package.json
+++ b/echo-server/package.json
@@ -16,6 +16,8 @@
     "start": "node dist/server.js",
     "anthropic-client": "npx tsx src/clients/anthropic-client.ts",
     "anthropic-gpt-client": "npx tsx src/clients/anthropic-gpt-client.ts",
+    "gemini-client": "npx tsx src/clients/gemini-client.ts",
+    "gemini-gpt-client": "npx tsx src/clients/gemini-gpt-client.ts",
     "openai-client": "npx tsx src/clients/gpt-client.ts",
     "test": "vitest run",
     "test:watch": "vitest",
@@ -55,6 +57,7 @@
   },
   "devDependencies": {
     "@anthropic-ai/sdk": "^0.39.0",
+    "@google/genai": "^0.3.0",
     "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.34.1",
     "@typescript-eslint/parser": "^8.34.1",
