--- a/echo-control/package.json
+++ b/echo-control/package.json
@@ -28,6 +28,7 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.1.0",
     "@tailwindcss/typography": "^0.5.16",
+    "@vercel/blob": "^0.25.1",
     "@vercel/otel": "^1.13.0",
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
