--- a/echo-control/package.json
+++ b/echo-control/package.json
@@ -12,7 +12,8 @@
     "prisma:generate": "pnpx prisma generate",
     "prisma:push": "pnpx prisma db push",
     "prisma:studio": "pnpx prisma studio",
-    "copy:model-prices": "cp ../echo-server/model_prices.json ./model_prices.json"
+    "copy:model-prices": "cp ../echo-server/model_prices.json ./model_prices.json",
+    "seed-app": "tsx scripts/seed-app-usage.ts"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.20.2",
@@ -26,7 +27,9 @@
     "@opentelemetry/sdk-trace-base": "1.26.0",
     "@prisma/client": "^6.8.2",
     "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slider": "^1.3.5",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.2.5",
     "@tailwindcss/typography": "^0.5.16",
     "@vercel/blob": "^0.25.1",
     "@vercel/otel": "^1.13.0",
@@ -58,6 +61,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
     "husky": "^9.0.0",
+    "tsx": "^4.20.3",
     "typescript": "^5.0.0"
   }
 }
