--- a/echo-react-sdk/package.json
+++ b/echo-react-sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zdql/echo-react-sdk",
-  "version": "0.1.13",
+  "version": "0.1.15",
   "description": "React SDK for Echo OAuth2 + PKCE authentication and token management",
   "type": "module",
   "main": "./dist/index.cjs",
@@ -45,12 +45,18 @@
   "license": "MIT",
   "peerDependencies": {
     "react": "^16.8.0 || ^17.0.0 || ^18.0.0 || ^19.0.0",
-    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0 || ^19.0.0"
+    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0 || ^19.0.0",
+    "openai": "^4.0.0 || ^5.0.0"
+  },
+  "peerDependenciesMeta": {
+    "openai": {
+      "optional": true
+    }
   },
   "dependencies": {
+    "@zdql/echo-typescript-sdk": "^1.0.17",
     "dompurify": "^3.2.6",
-    "oidc-client-ts": "^3.2.1",
-    "@zdql/echo-typescript-sdk": "^1.0.17"
+    "oidc-client-ts": "^3.2.1"
   },
   "devDependencies": {
     "@storybook/addon-docs": "^9.0.10",
@@ -80,6 +86,7 @@
     "undici": "^6.19.8",
     "vite": "^6.0.1",
     "vite-plugin-dts": "^4.3.0",
-    "vitest": "^3.2.3"
+    "vitest": "^3.2.3",
+    "openai": "^4.0.0 || ^5.0.0"
   }
 }
