--- a/echo-control/package.json
+++ b/echo-control/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
     "setup-webhook": "node scripts/setup-webhook.js",
     "test": "echo 'All tests passed!'",
+    "postinstall": "prisma generate",
     "prisma:generate": "pnpx prisma generate",
     "prisma:push": "pnpx prisma db push",
     "prisma:studio": "pnpx prisma studio",
