--- a/echo-control/package.json
+++ b/echo-control/package.json
@@ -27,6 +27,7 @@
     "@opentelemetry/sdk-metrics": "1.26.0",
     "@opentelemetry/sdk-trace-base": "1.26.0",
     "@prisma/client": "^6.8.2",
+    "@prisma/nextjs-monorepo-workaround-plugin": "^6.12.0",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-icons": "^1.3.2",
