--- a/echo-typescript-cli-sdk/package.json
+++ b/echo-typescript-cli-sdk/package.json
@@ -1,19 +1,13 @@
 {
-  "name": "@zdql/echo-typescript-sdk",
-  "version": "1.0.18",
-  "description": "TypeScript SDK for Echo platform",
+  "name": "@zdql/echo-typescript-cli-sdk",
+  "version": "1.0.0",
+  "description": "TypeScript CLI SDK for Echo platform",
   "type": "module",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.js"
-    }
-  },
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsup",
-    "dev": "tsup --watch",
+    "build": "tsc",
+    "dev": "tsc --watch",
     "lint": "pnpx eslint src/**/*.ts",
     "lint:fix": "pnpx eslint src/**/*.ts --fix",
     "type-check": "tsc --noEmit",
@@ -24,22 +18,32 @@
   "keywords": [
     "echo",
     "typescript",
+    "cli",
     "sdk",
     "api"
   ],
   "author": "Echo Team",
   "license": "MIT",
   "dependencies": {
-    "axios": "^1.6.0"
+    "axios": "^1.6.0",
+    "chalk": "^5.3.0",
+    "commander": "^11.0.0",
+    "inquirer": "^9.2.0",
+    "jose": "^6.0.11",
+    "open": "^9.1.0"
   },
   "devDependencies": {
+    "vitest": "^3.2.3",
+    "@types/express": "^5.0.3",
+    "@types/inquirer": "^9.0.8",
+    "@types/jest": "^30.0.0",
     "@types/node": "^24.0.3",
     "@typescript-eslint/eslint-plugin": "^8.34.1",
     "@typescript-eslint/parser": "^8.34.1",
+    "dotenv": "^16.5.0",
     "eslint": "^9.29.0",
-    "tsup": "^8.5.0",
-    "typescript": "^5.8.3",
-    "vitest": "^3.2.3"
+    "express": "^5.1.0",
+    "typescript": "^5.8.3"
   },
   "files": [
     "dist/**/*"
