--- a/echo-typescript-sdk/tsconfig.json
+++ b/echo-typescript-sdk/tsconfig.json
@@ -1,13 +1,9 @@
 {
   "extends": "../tsconfig.base.json",
   "compilerOptions": {
-    "outDir": "./dist",
     "rootDir": "./src",
     "baseUrl": "./src",
-    "types": ["node", "vitest/globals"],
-    "module": "ES2022",
-    "moduleResolution": "bundler",
-    "target": "ES2022"
+    "types": ["node", "vitest/globals"]
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "__tests__/**/*"]
