--- a/examples/nextjs15/package.json
+++ b/examples/nextjs15/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@zdql/echo-react-sdk": "file:../../echo-react-sdk",
     "next": "^15.1.4",
+    "openai": "^5.10.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
