--- a/echo-control/docker-compose.yml
+++ b/echo-control/docker-compose.yml
@@ -1,10 +1,10 @@
 services:
   postgres:
     image: postgres:15
-    container_name: echo-control-postgres
+    container_name: echo-control-postgres-v2
     restart: unless-stopped
     environment:
-      POSTGRES_DB: echo_control
+      POSTGRES_DB: echo_control_v2
       POSTGRES_USER: echo_user
       POSTGRES_PASSWORD: echo_password
     ports:
