--- a/echo-control/package.json
+++ b/echo-control/package.json
@@ -48,6 +48,7 @@
     "lucide-react": "^0.511.0",
     "nanoid": "^5.1.5",
     "next": "15.3.3",
+    "next-auth": "5.0.0-beta.29",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.4",
     "prisma": "^6.8.2",
