--- a/echo-control/package.json
+++ b/echo-control/package.json
@@ -17,6 +17,7 @@
     "seed-app": "tsx scripts/seed-app-usage.ts"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.10.0",
     "@clerk/nextjs": "^6.20.2",
     "@headlessui/react": "^2.2.4",
     "@opentelemetry/api": "^1.9.0",
