--- a/echo-control/package.json
+++ b/echo-control/package.json
@@ -50,6 +50,7 @@
     "nanoid": "^5.1.5",
     "next": "15.3.3",
     "next-auth": "5.0.0-beta.29",
+    "next-path-matcher": "^1.0.2",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.4",
     "prisma": "^6.8.2",
