--- a/echo-control/package.json
+++ b/echo-control/package.json
@@ -20,6 +20,7 @@
     "@auth/prisma-adapter": "^2.10.0",
     "@clerk/nextjs": "^6.20.2",
     "@headlessui/react": "^2.2.4",
+    "@icons-pack/react-simple-icons": "^13.7.0",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/api-logs": "0.57.2",
     "@opentelemetry/instrumentation": "0.57.2",
