update .env.example for echo server

--- a/echo-server/.env.example
+++ b/echo-server/.env.example
@@ -1,5 +1,55 @@
+# ----------
+# Config
+# ----------
+
+PORT=3070
+NODE_OPTIONS="--require @opentelemetry/auto-instrumentations-node/register"
+
+# ----------
+# Provider Keys
+# ----------
+
 OPENAI_API_KEY=
 ANTHROPIC_API_KEY=
-DATABASE_URL="postgresql://echo_user:echo_password@localhost:5432/echo_control?schema=public"
-ECHO_API_KEY=
+GEMINI_API_KEY=
+OPENROUTER_API_KEY=
+
+# ----------
+# Database
+# ----------
+
+DATABASE_URL="postgresql://echo_user:echo_password@localhost:5469/echo_control?schema=public"
+
+
+# ----------
+# Control Plane
+# ----------
+
 ECHO_CONTROL_BASE_URL=http://localhost:3000/
+ECHO_API_KEY=
+
+# ----------
+# OAuth
+# ----------
+
+OAUTH_JWT_SECRET=your-secret-key-change-in-production
+
+# ----------
+# Telemetry
+# ----------
+
+OTEL_EXPORTER_OTLP_ENDPOINT=
+OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=
+OTEL_EXPORTER_OTLP_HEADERS=
+OTEL_SERVICE_NAME=
+OTEL_SERVICE_VERSION=
+OTEL_NODE_RESOURCE_DETECTORS=
+OTEL_TRACES_EXPORTER=
+
+# ----------
+# Stripe
+# ----------
+
+STRIPE_SECRET_KEY=
+STRIPE_PUBLISHABLE_KEY=
+
