--- a/echo-control/package.json
+++ b/echo-control/package.json
@@ -47,6 +47,7 @@
     "framer-motion": "^12.23.0",
     "jose": "^6.0.11",
     "lucide-react": "^0.511.0",
+    "motion": "^12.23.12",
     "nanoid": "^5.1.5",
     "next": "15.3.3",
     "next-auth": "5.0.0-beta.29",
@@ -58,7 +59,7 @@
     "react-dom": "^19.0.0",
     "recharts": "^2.15.4",
     "stripe": "^18.2.1",
-    "tailwind-merge": "^3.3.0",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7"
   },
